honeypot-istio/honey-istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: honey-istio
  name: honey-istio
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
    nodePort: 30005
  selector:
    name: honey-istio
    type: NodePort
